# feynman0.0

./: .gitignore  package-lock.json  package.json
fixtures/: dipole.json  dirichlet_box.json  parallel_plates.json  point_charge.json  reference-cases.json
solver/: Cargo.toml
solver/src/: lib.rs
solver/src/circuit/: mna.rs  mod.rs
solver/src/common/: config.rs  grid.rs  mod.rs
solver/src/field/: engine.rs  gauss_seidel.rs  jacobi.rs  mod.rs  sor.rs
solver/tests/: field_reference.rs
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx
web/src/components/: BoundaryControls.css  BoundaryControls.tsx  CircuitNodes.css  CircuitNodes.tsx  CircuitResultPanel.css  CircuitResultPanel.tsx  ConflictList.css  ConflictList.tsx  DiffView.css  DiffView.tsx  ErrorBoundary.tsx  ExportMenu.css  ExportMenu.tsx  FieldCanvas.css  FieldCanvas.tsx  FieldProbe.css  FieldProbe.tsx  Layout.css  Layout.tsx  LiveControls.css  LiveControls.tsx  Palette.css  Palette.tsx  PropertyPanel.css  PropertyPanel.tsx  RunTreeNode.tsx  RunTreePanel.css  RunTreePanel.tsx  SchematicCanvas.css  SchematicCanvas.tsx  StatusBar.css  StatusBar.tsx  SweepPanel.css  SweepPanel.tsx  Toolbar.css  Toolbar.tsx
web/tests/: circuitSolver.test.ts  circuitSolverExtended.test.ts  commandStack.test.ts  contours.test.ts  diffRuns.test.ts  diffRunsExtended.test.ts  exporters.test.ts  fieldProbe.test.ts  fieldVectors.test.ts  gaussCheck.test.ts  precision.test.ts  referenceCases.test.ts  smoke.test.ts  solveController.test.ts  sweepEngine.test.ts  validation.test.ts  validationExtended.test.ts
(+39 files in other folders)
